--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -16,16 +16,32 @@
         </div>
         <div>
         {% if categories %}
+            <h2>Most Liked Categories</h2>
             <ul>
                 {% for category in categories %}
                 <li>
-                    <a href="/rango/category/{{ category.slug }}/">{{ category.name }} </a>
+                    <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
                 </li>
                 {% endfor %}
             </ul>
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
+        </div>
+        <div>
+            {% if pages %}
+            <ul>
+                <h2>Most Viewed Pages</h2>
+                {% for page in pages %}
+                <li>
+                    <a href="{{ page.url }}">{{ page.title }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        <div>
         <div>
             <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}"
