--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -44,8 +44,9 @@
         <div>
         <div>
             <a href="/rango/about/">About</a><br />
+            <a href="/rango/add_category/">Add a New Category</a><br />
             <img src="{% static 'images/rango.jpg' %}"
-                 alt="Picture of Rango" />
+                 alt="Picture of Rango" /><br />
         </div>
     </body>
 </html>
