--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,11 +1,15 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<!DOCTYPEhtml>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>Add a Page</h1>
+{% block title_block %}
+    Add a Page
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>
+            Add a Page to {{ category.name }}
+        </h1>
         <div>
             <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
                     {% csrf_token %}
@@ -21,6 +25,5 @@
                     <input type="submit" name="submit" value="Create Page" />
             </form>
         </div>
-    </body>
-</html>
-
+    {% endif %}
+{% endblock %}
