--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -43,5 +43,5 @@
         {% else %}
             <strong>There are no pages present.</strong>
         {% endif %}
-    <div>
+    </div>
 {% endblock %}
